opam-version: "2.0"
synopsis: "A Coq library for synthetic guarded domain theory"
description: """
  A Coq library for synthetic guarded domain theory
"""

homepage: "https://github.com/jonsterling/coq-sgdt"
dev-repo: "git+https://github.com/jonsterling/coq-sgdt.git"
bug-reports: "https://github.com/jonsterling/coq-sgdt/issues"
doc: "https://jonsterling.github.io/coq-sgdt/"
maintainer: "jon@jonmsterling.com"
authors: [
  "Jonathan Sterling"
]

license: "Apache-2.0"

depends: [
  "coq" {>= "8.13" }
  "coq-mathcomp-ssreflect" {>= "1.12.0"}
  "coq-hierarchy-builder" {>= "1.2.0"}
]

build: [
  [make]
]
install: [
  [make "install"]
]

